@@ -1,5 +1,6 @@
 #!/usr/bin/python3
 
+import os
 import sys
 
 try:
@@ -7,6 +8,12 @@ try:
         oldlines = list(f.readlines())
 except FileNotFoundError:
     sys.exit(0)
+
+
+def drop_prior_comments(lines):
+    while lines and lines[-1].strip().startswith('#'):
+        lines.pop(-1)
+
 
 newlines = []
 for line in oldlines:
@@ -19,15 +26,20 @@ for line in oldlines:
         newlines.append(line)
     else:
         if key.strip() == 'compression':
+            drop_prior_comments(newlines)
             print("Drop custom source compression.")
             continue
         if key.strip() == 'compression-level':
+            drop_prior_comments(newlines)
             print("Drop custom source compression level.")
             continue
         newlines.append(line)
 
-with open('debian/source/options', 'w') as f:
-    f.writelines(newlines)
+if newlines:
+    with open('debian/source/options', 'w') as f:
+        f.writelines(newlines)
+else:
+    os.unlink('debian/source/options')
 
 print(
     "Fixed-Lintian-Tags: debian-source-options-has-custom-compression-settings"
