@@ -1,0 +1,3 @@
+tar-ignore = .git*
+tar-ignore = .hg*
+tar-ignore = .travis.yml
