@@ -9,6 +9,8 @@ lintian-brush (0.58) UNRELEASED; urgency=medium
     debian/control are missing.
   * When generating watch files for pypi, check package details against
     the API.
+  * Strip related comments when removing options from
+    debian/source/options.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 31 Jan 2020 11:34:36 +0000
 
